@@ -62,6 +62,7 @@ public abstract class BaseAnalyzerTest {
             .add("text", DataTypes.STRING, null, ReferenceInfo.IndexType.ANALYZED)
             .add("no_index", DataTypes.STRING, null, ReferenceInfo.IndexType.NO)
             .add("details", DataTypes.OBJECT, null)
+            .add("details", DataTypes.STRING, Arrays.asList("foo"))
             .add("awesome", DataTypes.BOOLEAN, null)
             .add("counters", new ArrayType(DataTypes.LONG), null)
             .add("friends", new ArrayType(DataTypes.OBJECT), null, ColumnPolicy.DYNAMIC)
@@ -174,6 +175,12 @@ public abstract class BaseAnalyzerTest {
             .add("tags", DataTypes.STRING, Arrays.asList("name"))
             .add("tags", new ArrayType(DataTypes.OBJECT), Arrays.asList("metadata"))
             .add("tags", DataTypes.LONG, Arrays.asList("metadata", "id"))
+            .build();
+
+    public static final TableIdent IGNORED_NESTED_TABLE_IDENT = new TableIdent(ReferenceInfos.DEFAULT_SCHEMA_NAME, "ignored_nested");
+    public static final TableInfo IGNORED_NESTED_TABLE_INFO = new TestingTableInfo.Builder(
+            IGNORED_NESTED_TABLE_IDENT, RowGranularity.DOC, new Routing())
+            .add("details", DataTypes.OBJECT, null, ColumnPolicy.IGNORED)
             .build();
 
     static final TableIdent TEST_DOC_LOCATIONS_TABLE_IDENT = new TableIdent(ReferenceInfos.DEFAULT_SCHEMA_NAME, "locations");
